--- a/views/index.ejs
+++ b/views/index.ejs
@@ -188,7 +188,7 @@
           </section>
         </div>
 
-    <div class="col-lg-6">
+    <div class="col-lg-5">
           <div id="main">
 
             <!-- Post -->
@@ -204,23 +204,30 @@
                   </div>
                 </header>
                   <div class="row post-row1">
-                    <div class="col col-lg-4">
+                    <div class="col col-lg-6">
                       <a href="#" class="image featured"><img src="../images/club_pic.jpg" alt="" /></a>
                     </div>
-                    <div class="col col-lg-8">
+                    <div class="col col-lg-6">
                       <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. </p>
                     </div>
+                    <div class="post_lower_row">
+                  
+                        <div class="col-lg-7">
+                            <ul class="actions">
+                              <li><a href="#" class="button big">Continue Reading</a></li>
+                            </ul>
+                          </div>
+                          <div class="col-lg-4">
+                            <ul class="stats">
+                              <li><a href="#">General</a></li>
+                              <li><a href="#" class="icon fa-heart"> 28</a></li>
+                              <li><a href="#" class="icon fa-comment"> 128</a></li>
+                            </ul>
+                          </div>
+                    
+                    </div>
                   </div>
-                <footer>
-                  <ul class="actions">
-                    <li><a href="#" class="button big">Continue Reading</a></li>
-                  </ul>
-                  <ul class="stats">
-                    <li><a href="#">General</a></li>
-                    <li><a href="#" class="icon fa-heart">28</a></li>
-                    <li><a href="#" class="icon fa-comment">128</a></li>
-                  </ul>
-                </footer>
+                
               </article>
 
             <!-- Post -->
@@ -284,8 +291,7 @@
           </div>
 
       </div>
-          <div class="col-lg-2">
-          FACEBOOK LIKE BUTTON
-          <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fgbm.macbenji.7%3Fref%3Dbr_rs&width=200px&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId=1850520835179711" width="200px" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-          </div>
-      </div>
+          <div class="fb_box col-lg-2">
+          <h2>LIKE OUR PAGE</h2>
+
+<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FGBMBENJIS%2F%3Fpnref%3Dlhc&tabs=timeline&width=300&height=150&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1850520835179711" width="300" height="150" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>      </div>
