3rd commit to git and heroku

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
 
 <!-- Main -->
 <div class="row row-main">
-    <div class="col-lg-4">
+    <div class="rowmain_col_left col-lg-3">
           <!-- Sidebar -->
           <section id="sidebar">
 
@@ -188,7 +188,7 @@
           </section>
         </div>
 
-    <div class="col-lg-5">
+    <div class="col-lg-5.5">
           <div id="main">
 
             <!-- Post -->
@@ -291,7 +291,7 @@
           </div>
 
       </div>
-          <div class="fb_box col-lg-2">
+          <div class="fb_box col-lg-3">
           <h2>LIKE OUR PAGE</h2>
 
 <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FGBMBENJIS%2F%3Fpnref%3Dlhc&tabs=timeline&width=300&height=150&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1850520835179711" width="300" height="150" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>      </div>
