--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1408,7 +1408,10 @@
 	}
 
 	body {
-		background-color: black;
+		/* background-color: #4C4C4C; */
+		  background-color: #f7f7f7;  
+		/* background-image: url('https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/dHnxL5V/money-falling-dollars-financial-win-us-currency-tax-black-background_4yo7xf8__F0000.png');
+		background-attachment: fixed; */
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -2582,7 +2585,7 @@
 		border: solid 2px darkgoldenrod;
 		margin: 0 0 3em 0;
 		position: relative;
-		 box-shadow: 1px 1px 17px whitesmoke; 
+		 box-shadow: 1px 1px 11px lightslategray; 
 		  width: 600px;
 			/* height: 900px; */
 	}
