--- a/public/assets/css/music.css
+++ b/public/assets/css/music.css
@@ -1,6 +1,6 @@
 .containers-container {height: 210px;}
-.container-outer { overflow: auto;  white-space: nowrap; width: 100%; height: 210px; background-color: lightslategrey; border-top: 2px solid #CFB53B; border-bottom: 2px solid #CFB53B; }
-.container-inner {height: 100%; width: 100%; display: inline-block; }
+.container-outer { overflow: auto;  white-space: nowrap; width: 100%; height: 210px; background-color: black; border-top: 2px solid #CFB53B; border-bottom: 2px solid #CFB53B; }
+.container-inner { width: 100%; display: inline-block; }
 
 /* #wrapper {
     max-width: none !important;
