--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
 
 <!-- Main -->
 <div class="row row-main">
-    <div class="rowmain_col_left col-lg-3">
+    <div class="rowmain_col_left col-sm-3 col-xs-3 col-lg-3">
           <!-- Sidebar -->
           <section id="sidebar">
 
@@ -66,7 +66,7 @@
 
             <!-- Posts List -->
               <section>
-              <h3 style="color: white; margin-bottom: 20px;">Artists on the rise</h3>
+              <h3 class="artist_rise" style="">Artists on the rise</h3>
                 <ul class="posts">
                   <li>
                     <article>
@@ -134,7 +134,7 @@
                   <!-- Mini Post -->
                     <article class="mini-post">
                       <header>
-                        <h3><a href="#">Rutrum neque accumsan</a></h3>
+                        <h3><a href="#">DONE DEAL: This chain!</a></h3>
                         <time class="published" datetime="2015-10-19">October 19, 2015</time>
                         <a href="#" class="author"><img src="../images/avatar.jpg" alt="" /></a>
                       </header>
@@ -188,7 +188,7 @@
           </section>
         </div>
 
-    <div class="col-lg-5.5">
+    <div class="col-lg-5.5 col-sm-5.5 col-xs-5.5">
           <div id="main">
 
             <!-- Post -->
@@ -204,20 +204,20 @@
                   </div>
                 </header>
                   <div class="row post-row1">
-                    <div class="col col-lg-6">
+                    <div class="col col-lg-6 col-sm-6 col-xs-6">
                       <a href="#" class="image featured"><img src="../images/club_pic.jpg" alt="" /></a>
                     </div>
-                    <div class="col col-lg-6">
+                    <div class="col col-lg-6 col-sm-6 col-xs-6">
                       <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. </p>
                     </div>
                     <div class="post_lower_row">
                   
-                        <div class="col-lg-7">
+                        <div class="col-lg-7 col-sm-7 col-xs-7">
                             <ul class="actions">
                               <li><a href="#" class="button big">Continue Reading</a></li>
                             </ul>
                           </div>
-                          <div class="col-lg-4">
+                          <div class="col-lg-4 col-sm-4 col-xs-4">
                             <ul class="stats">
                               <li><a href="#">General</a></li>
                               <li><a href="#" class="icon fa-heart"> 28</a></li>
@@ -234,8 +234,8 @@
               <article class="post">
                 <header>
                   <div class="title">
-                    <h2><a href="#">Ultricies sed magna euismod enim vitae gravida</a></h2>
-                    <p>Lorem ipsum dolor amet nullam consequat etiam feugiat</p>
+                    <h2><a href="#">Hop on before it's too late!</a></h2>
+                    <p>We leavin the station.</p>
                   </div>
                   <div class="meta">
                     <time class="published" datetime="2015-10-25">October 25, 2015</time>
@@ -291,7 +291,9 @@
           </div>
 
       </div>
-          <div class="fb_box col-lg-3">
-          <h2>LIKE OUR PAGE</h2>
-
-<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FGBMBENJIS%2F%3Fpnref%3Dlhc&tabs=timeline&width=300&height=150&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1850520835179711" width="300" height="150" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>      </div>
+          <div class="fb_box col-lg-3 col-sm-3 col-xs-3">
+            <h2>LIKE OUR PAGE</h2>
+            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FGBMBENJIS%2F%3Fpnref%3Dlhc&tabs=timeline&width=300&height=150&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1850520835179711" width="300" height="150" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>    
+<a href="https://geo.itunes.apple.com/us/album/benji-mode/id1193482602?i=1193482612&mt=1&app=music" style="display:inline-block;overflow:hidden;background:url(//linkmaker.itunes.apple.com/assets/shared/badges/en-us/music-lrg.svg) no-repeat;width:110px;height:40px;background-size:contain;"></a>        </div>
+        <div class="fb_box col-lg-3 col-sm-3 col-xs-3">
+        </div>
