--- a/views/music.ejs
+++ b/views/music.ejs
@@ -1,54 +1,67 @@
 
-<div id="wrapper" style="display: block">
+<div id="wrapper" class="music_wrapper" style="display: block">
 
-<div class="containers-container">
-<div class="container-outer">
-   <span class="container-inner" id="grouper">
-        <span class="about">
-            <p style="display: block;">mac benji</p>
-        </span>
-        <span class="about">
-            <p style="display: block;">mac benji</p>
-        </span>
-        <span class="about">
-            <p style="display: block;">mac benji</p>
-        </span>
-        <span class="about">
-            <p style="display: block;">mac benji</p>
-        </span>
-        <span class="about">
-            <p style="display: block;">mac benji</p>
-        </span>
-        <span class="about">
-            <p style="display: block;">mac benji</p>
-        </span>
-        <span class="about">
-            <p style="display: block;">mac benji</p>
-        </span>
-        <span class="about">
-            <p style="display: block;">mac benji</p>
-        </span>
-        <span class="about">
-            <p style="display: block;">mac benji</p>
-        </span>
-        <span class="about">
-            <p style="display: block;">mac benji</p>
-        </span>
-        <span class="about">
-            <p style="display: block;">mac benji</p>
-        </span>
-        <span class="about">
-            <p style="display: block;">mac benji</p>
-        </span>
-        <span class="about">
-            <p style="display: block;">mac benji</p>
-        </span>
+<div  class="row containers-container">
+    <div class="container-outer">
+    <span class="container-inner" id="grouper">
+            <span class="about">
+                <p style="display: block;">mac benji</p>
+            </span>
+            <span class="about">
+                <p style="display: block;">mac benji</p>
+            </span>
+            <span class="about">
+                <p style="display: block;">mac benji</p>
+            </span>
+            <span class="about">
+                <p style="display: block;">mac benji</p>
+            </span>
+            <span class="about">
+                <p style="display: block;">mac benji</p>
+            </span>
+            <span class="about">
+                <p style="display: block;">mac benji</p>
+            </span>
+            <span class="about">
+                <p style="display: block;">mac benji</p>
+            </span>
+            <span class="about">
+                <p style="display: block;">mac benji</p>
+            </span>
+            <span class="about">
+                <p style="display: block;">mac benji</p>
+            </span>
+            <span class="about">
+                <p style="display: block;">mac benji</p>
+            </span>
+            <span class="about">
+                <p style="display: block;">mac benji</p>
+            </span>
+            <span class="about">
+                <p style="display: block;">mac benji</p>
+            </span>
+            <span class="about">
+                <p style="display: block;">mac benji</p>
+            </span>
+            <span class="about">
+                <p style="display: block;">mac benji</p>
+            </span>
+            <span class="about">
+                <p style="display: block;">mac benji</p>
+            </span>
+            <span class="about">
+                <p style="display: block;">mac benji</p>
+            </span>
 
-    </span>
+        </span>
+    </div>
 </div>
-</div>
-<div style="background-color: black; width: 100%; height: 500px;">  
 
+<div class="row">
+    <div class="col-lg-offset-1 col-lg-10 music_desc_ajax">
+    
+    </div>
 </div>
+
 
 </div>
